[tool.poetry]
name = "moviestar"
version = "0.1.0"
description = ""
authors = ["Sion Noh <shtldhs123@ajou.ac.kr>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"
pymongo = "^3.11.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
